--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 												<label for="message">Message</label>
 												<textarea name="message" id="message" rows="5"></textarea>
 											</div>
-										</div>		
+										</div>
+										<button type="submit">Send</button>	
 									</form>
 								</section>
 								<section>
