--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hello!</h1>
-							<p>I'm <strong>Fernando González</strong>, a comitted video game programmer, designer, and director with over ten years of experience making games</a>.</p>
+							<p>I'm <strong>Fernando González</strong>, a comitted video game programmer, designer, and director with over ten years of formation and seven years of experience making games.</a>.</p>
 							
 						</div>
 					</section>
@@ -61,7 +61,7 @@
 							<section>
 								<span class="icon solid major fa-comment"></span>
 								<h3>Profecient languages</h3>
-								<p>Spanish and English, both in a native level.</p>
+								<p>Spanish and English, both at a native level.</p>
 							</section>
 							<section>
 								<span class="icon solid major fa-briefcase"></span>
@@ -115,7 +115,10 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Olpheist</h2>
-								<p>Currently in development, a 3D open-world RPG with turn based combat and monster catching mechanics. The game is set on a high fantasy world inspired by Arthurian legends and classic JRPGs</p>
+								<p>Currently in development, a 3D open-world RPG with turn based combat and monster catching mechanics. The game is set on a high fantasy world inspired by Arthurian legends and classic JRPGs.</p>
+								<ul class="actions">
+									<li><a href="https://www.behance.net/gallery/177920681/Olpheist-Portfolio-Pictures" class="button">level design gallery</a></li>
+								</ul>
 							</div>
 						</div>
 					</section>
