Update index.html again

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<h2>Who I am</h2>
 						<p>Originally from San Salvador, El Salvador, I’m a freelance game and software developer currently based in Barcelona, Spain. Having worked with a variety of frameworks and game engines for over a decade, designing and developing games is truly my passion and life’s work. I have worked with a broad range of clients and produced a wide variety of video games.</p>
 						<p>Having spent most of my young adulthood developing games with Unity 3D, I can swiftly design and implement a wide variety of systems in an effective and efficient manner. Although I’ve taken an active part in a wide variety of development fronts, from implementation of video game AI to coding graphics and compute shaders with GLSL, level design and gameplay programming are without a doubt my favorite part of the job. I particularly enjoy working with new tools and frameworks that force me to adapt and keep growing as a developer.</p>
-						<p>As an accomplished graduate, I hold a Bachelor's degree in Software Engineering from ENTI, a faculty at Universitat de Barcelona. I am currently open to working for a studio or startup in need of a professional and highly experienced developer to help to produce their projects.</p>
+						<p>As an accomplished graduate, I hold a Bachelor's degree in Software Engineering from ENTI, a faculty at Universitat de Barcelona. I am currently open to working for a studio or startup in need of a professional and experienced developer to help to produce their projects.</p>
 						<div class="features">
 							<section>
 								<span class="icon solid major fa-code"></span>
