Update index.html period

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hello!</h1>
-							<p>I'm <strong>Fernando González</strong>, a comitted video game programmer, designer, and director with over ten years of formation and seven years of experience making games.</a>.</p>
+							<p>I'm <strong>Fernando González</strong>, a comitted video game programmer, designer, and director with over ten years of formation and seven years of experience making games</a>.</p>
 							
 						</div>
 					</section>
