--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Otherview</h2>
-								<p>A reality bending puzzle game that takes the player on a 3D and 2D adventure simultaneously. The game is designed to alter the player's approach to solving basic platforming puzzles by distorting 3D space depending on the camera's perspective.</p>
+								<p>A reality bending puzzle game that takes the player on a 3D and 2D adventure simultaneously. The game is designed to alter the player's approach to solving basic platforming puzzles by distorting 3D space depending on the camera's perspective. Developed along with 2 other team members, I took part in level design and gameplay programming.</p>
 								<ul class="actions">
 									<li><a href="https://atomhack.itch.io/otherview" class="button">play now</a></li>
 								</ul>
@@ -91,7 +91,7 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Lylac</h2>
-								<p>A first person looter-shooter. You wake up on an abandoned spaceship and the portal to return home is broken upon inspection. You will have to warp around the galaxy and defeat waves of robots in order to re-activate the portal.</p>
+								<p>A first person looter-shooter. You wake up on an abandoned spaceship and the portal to return home is broken upon inspection. You will have to warp around the galaxy and defeat waves of robots in order to re-activate the portal. Developed along with 3 other team members, I took part in game design, level design, AI programming and gameplay programming.</p>
 								<ul class="actions">
 									<li><a href="https://bittencarrotgames.itch.io/lylac" class="button">play now</a></li>
 								</ul>
@@ -103,7 +103,7 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Jueguito, The Game</h2>
-								<p>A fast paced brawler you can play with up to 4 friends locally or alone against the AI. Enjoy friendly battles in dynamic maps using a variety of item pickups. Gamepad required to play.</p>
+								<p>A fast paced brawler you can play with up to 4 friends locally or alone against the AI. Enjoy friendly battles in dynamic maps using a variety of item pickups. Gamepad required to play. Developed along with 3 other team members, I took part in game design, level design, and gameplay programming.</p>
 								<ul class="actions">
 									<li><a href="https://kubitstudios.itch.io/jueguito-the-game" class="button">play now</a></li>
 								</ul>
@@ -115,7 +115,7 @@
 						<div class="content">
 							<div class="inner">
 								<h2>Olpheist</h2>
-								<p>Currently in development, a 3D open-world RPG with turn based combat and monster catching mechanics. The game is set on a high fantasy world inspired by Arthurian legends and classic JRPGs.</p>
+								<p>Currently in development, a 3D open-world RPG with turn based combat and monster catching mechanics. The game is set on a high fantasy world inspired by Arthurian legends and classic JRPGs. Developed solely by myself.</p>
 								<ul class="actions">
 									<li><a href="https://www.behance.net/gallery/177920681/Olpheist-Portfolio-Pictures" class="button">level design gallery</a></li>
 								</ul>
